stop quote icon overlapping with text

--- a/assets/stylesheets/responsive/custom.scss
+++ b/assets/stylesheets/responsive/custom.scss
@@ -346,6 +346,7 @@ color:#005068;
   span.desc {
     background: image-url('quote-marks.png') no-repeat;
     min-height: 2em;
+    padding: 0 0 0 40px;
   }
 
   span.bottomline {
